objects/RFQ_Tasks_Routing__c.object
<CustomObject>
    <description>Custom object defining detail of tasks related to route.</description>
    <fields>
        <fullName>ASIC_Steps__c</fullName>
        <label>ASIC Steps</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>B&amp;P NRE Cost RollUp</fullName>
                </value>
                <value>
                    <fullName>Email to PCM</fullName>
                </value>
                <value>
                    <fullName>Production Expedite</fullName>
                </value>
                <value>
                    <fullName>WW Design Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <inlineHelpText>Provide the  task Action Type</inlineHelpText>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Comment</fullName>
                </value>
                <value>
                    <fullName>Notify Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Add_Offset_Days__c</fullName>
        <inlineHelpText>Select the Task Durations</inlineHelpText>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_in_Task_Name_picklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add in Task Name picklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adjusted_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Allow_Delegation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Delegation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backup_Request_Catcher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup Request Catcher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TasksQiMI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calculate_due_date_based_on__c</fullName>
        <label>Calculate due date based on</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negotiation date</fullName>
                </value>
                <value>
                    <fullName>Customer response date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculate_due_date_based_on_new__c</fullName>
        <formula>TEXT(Related_RFQ_Routing__r.Calculate_due_date_based_on__c)</formula>
        <label>Calculate due date based on</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Provide the Assignee Action  Comments Details</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completion Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_response_date1__c</fullName>
        <formula>Related_RFQ_Routing__r.RFQ__r.Date_customer_wants_response__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer response date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_response_date__c</fullName>
        <formula>Related_RFQ_Routing__r.RFQ__r.Date_customer_wants_response__c</formula>
        <label>Customer response date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_response_date_new1__c</fullName>
        <label>Customer response date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_response_date_new__c</fullName>
        <label>Customer response date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delegated_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFQ_Tasks_Routing1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +Related_RFQ_Routing__r.RFQ__r.Customer_Requirement__r.Device__r.Id,  Related_RFQ_Routing__r.RFQ__r.Customer_Requirement__r.Device__r.Name  , &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Task Due Date and Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_To_PCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email To PCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date_New__c</fullName>
        <formula>IF(Complete__c == true,  NOW() , null)</formula>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Select the Task End Date</inlineHelpText>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <description>Inidcator for task progress , red, orange or green</description>
        <formula>IF( Task_Due_Date_and_Time__c  &gt;  End_Date__c , Image(&quot;/resource/BnP_GreenFlag&quot;,&quot;&quot;,30,30), 
  IF(Task_Due_Date_and_Time__c = End_Date__c, Image(&quot;/resource/BnP_OrangeFlag&quot;,&quot;&quot;,30,30),
    IF(Task_Due_Date_and_Time__c &lt;  End_Date__c, Image(&quot;/resource/BnP_RedFlag&quot;,&quot;&quot;,30,30) , 
     IF((Task_Due_Date_and_Time__c =  NOW()|| Task_Due_Date_and_Time__c &lt;  NOW()) &amp;&amp;   ISBLANK(End_Date__c), Image(&quot;/resource/BnP_RedFlag&quot;,&quot;&quot;,30,30) , Image(&quot;/resource/BnP_GreenFlag&quot;,&quot;&quot;,30,30)
     )
    )
  ) 
)</formula>
        <label>Task Progress Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Paused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Paused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Owner_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Owner Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Negotiation_Date1__c</fullName>
        <formula>Related_RFQ_Routing__r.RFQ__r.Negotiation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Negotiation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Negotiation_Date_New1__c</fullName>
        <label>Negotiation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Negotiation_Date_New__c</fullName>
        <label>Negotiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Negotiation_Date__c</fullName>
        <formula>Related_RFQ_Routing__r.RFQ__r.Negotiation_Date__c</formula>
        <label>Negotiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +Related_RFQ_Routing__r.RFQ__r.Customer_Requirement__r.Id,  Related_RFQ_Routing__r.RFQ__r.Customer_Requirement__r.Name  , &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_New__c</fullName>
        <inlineHelpText>Enter Task Order</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Provide the Number of Order</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Task</label>
        <referenceTo>RFQ_Tasks_Routing__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Parent_tas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pause_Duration__c</fullName>
        <formula>Related_RFQ_Routing__r.Pause_End_Date__c-Related_RFQ_Routing__r.Pause_Date__c</formula>
        <label>Pause Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pause_End_Date__c</fullName>
        <label>Pause End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pause_Period__c</fullName>
        <formula>IF(NOT(ISBLANK(Pause_Start_Date__c)) &amp;&amp; Is_Paused__c, NOW()  -  Pause_Start_Date__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pause Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pause_Reason__c</fullName>
        <label>Pause Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CEST Optimization Assessment</fullName>
                </value>
                <value>
                    <fullName>Customer Clarification</fullName>
                </value>
                <value>
                    <fullName>Customer Revisions</fullName>
                </value>
                <value>
                    <fullName>FAE Clarification</fullName>
                </value>
                <value>
                    <fullName>IP Sizing or Response</fullName>
                </value>
                <value>
                    <fullName>Missing Chip/Pkg Definition</fullName>
                </value>
                <value>
                    <fullName>New Request</fullName>
                </value>
                <value>
                    <fullName>Non-Quote Activity</fullName>
                </value>
                <value>
                    <fullName>Package Assessment</fullName>
                </value>
                <value>
                    <fullName>Priority On another quote</fullName>
                </value>
                <value>
                    <fullName>SoC Sizing</fullName>
                </value>
                <value>
                    <fullName>Tool Issues</fullName>
                </value>
                <value>
                    <fullName>2.5D Assessment</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pause_Start_Date__c</fullName>
        <label>Pause Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Predecessor_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predecessor Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RFQ_Tasks_Routing__c.Related_RFQ_Routing__c</field>
                <operation>equals</operation>
                <valueField>$Source.Related_RFQ_Routing__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RFQ_Tasks_Routing__c</referenceTo>
        <relationshipLabel>Tasks (Predecessor Task)</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Queue_End_Date1__c</fullName>
        <formula>IF( NOT( ISBLANK( Start_Date__c ) ) , Adjusted_Start_Date__c, null)</formula>
        <label>Queue End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queue_End_Date__c</fullName>
        <label>Queue End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queue_Start_Date__c</fullName>
        <label>Queue Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queue_TAT__c</fullName>
        <formula>DATETIMEVALUE( Queue_End_Date1__c ) -  DATETIMEVALUE( Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue TAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_RFQ_Routing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Routing</label>
        <referenceTo>RFQ_Routing__c</referenceTo>
        <relationshipLabel>Tasks Routing</relationshipLabel>
        <relationshipName>RFQ_Tasks_Routing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Catcher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Request Catcher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFQ_Tasks_Routing3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Information_Number__c</fullName>
        <formula>Related_RFQ_Routing__r.RFQ__r.Request_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Information #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Information__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +Related_RFQ_Routing__r.RFQ__r.Id,  Related_RFQ_Routing__r.RFQ__r.Name  , &apos;_blank&apos;)</formula>
        <label>Request Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Creator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route Creator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TasksQiMh</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TasksQiMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Select_Task_Name__c</fullName>
        <inlineHelpText>Select the Task Name</inlineHelpText>
        <label>Task Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISC</fullName>
                </value>
                <value>
                    <fullName>Mfg Engineering</fullName>
                </value>
                <value>
                    <fullName>ICBM</fullName>
                </value>
                <value>
                    <fullName>Parameters</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Program manager</fullName>
                </value>
                <value>
                    <fullName>Reliability Engineering</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Site Assurance</fullName>
                </value>
                <value>
                    <fullName>Special Quote Team</fullName>
                </value>
                <value>
                    <fullName>System Architect</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>WW Design Center</fullName>
                </value>
                <value>
                    <fullName>WW Package and Test</fullName>
                </value>
                <value>
                    <fullName>Bid and Propose</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Bromont</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Burn-In</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Characterization</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Customer Requested Experiment</fullName>
                </value>
                <value>
                    <fullName>C4 Plating</fullName>
                </value>
                <value>
                    <fullName>Test add in picklist</fullName>
                </value>
                <value>
                    <fullName>Test add in picklist2</fullName>
                </value>
                <value>
                    <fullName>Test Task12</fullName>
                </value>
                <value>
                    <fullName>Task 1</fullName>
                </value>
                <value>
                    <fullName>Task A</fullName>
                </value>
                <value>
                    <fullName>Task B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <inlineHelpText>Any (Parallel)
All (Serial)</inlineHelpText>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skip_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Select the Task Start Date</inlineHelpText>
        <label>Queue Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>To select the Assignee Action Approve Status</inlineHelpText>
        <label>Approve Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Assignee__c</fullName>
        <inlineHelpText>Provide the Task Assignee details</inlineHelpText>
        <label>Task Assignee</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Due_Date_and_Time__c</fullName>
        <label>Task Due Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task_Duration__c</fullName>
        <formula>IF(ISBLANK(End_Date__c), NOW() - Task_Original_Start_Date__c, End_Date__c - Task_Original_Start_Date__c)</formula>
        <label>Total Task Duration with Pause</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <inlineHelpText>Provide the Task Type</inlineHelpText>
        <label>Task Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Original_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Original Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFQ_Tasks_Routing2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Original_Start_Date__c</fullName>
        <formula>IF(NOT(ISBLANK( Adjusted_Start_Date__c )),  Adjusted_Start_Date__c ,  Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Original Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <inlineHelpText>Select the Task Status</inlineHelpText>
        <label>Task Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InProgress</fullName>
                    <default>true</default>
                    <label>InProgress</label>
                </value>
                <value>
                    <fullName>Pause</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_actual_TAT__c</fullName>
        <formula>Actual_End_Date__c  -  Adjusted_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task actual TAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Pause_Dur_Sum__c</fullName>
        <formula>Total_Pause_Duration__c + Pause_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Pause Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Pause_Duration__c</fullName>
        <label>Total Pause Duration</label>
        <summarizedField>Task_Pause_Details__c.Pause_Duration_in_mins__c</summarizedField>
        <summaryForeignKey>Task_Pause_Details__c.Related_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Task_Duration_without_Pause__c</fullName>
        <formula>IF(Task_Duration__c - Total_Pause_Dur_Sum__c &gt; 0, Task_Duration__c - Total_Pause_Dur_Sum__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Task Duration without Pause</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Task_actual_Duration_with_Pause__c</fullName>
        <formula>Task_actual_TAT__c  +  Total_Pause_Dur_Sum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Task actual Duration with Pause</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Task_actual_Duration_without_Pause__c</fullName>
        <formula>Task_actual_TAT__c  -  Total_Pause_Dur_Sum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Task actual Duration without Pause</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFQ_Tasks_Routing</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RTSK-{00000}</displayFormat>
        <label>Routing Task No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Opportunity_Program_Team__c</fullName>
        <label>Opportunity Program Team</label>
    </sharingReasons>
    <validationRules>
        <fullName>Allow_only_approval_task</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  ISPICKVAL(Related_RFQ_Routing__r.Route_Base_Purpose__c, &apos;Approval&apos;), NOT(ISPICKVAL( Action__c, &apos;&apos;)), NOT(ISPICKVAL( Action__c, &apos;Approve&apos;))
)</errorConditionFormula>
        <errorMessage>This route will only include task that require assignee&apos;s approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allow_only_notify_task</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  ISPICKVAL(Related_RFQ_Routing__r.Route_Base_Purpose__c, &apos;Review&apos;), NOT(ISPICKVAL( Action__c, &apos;&apos;)), NOT(ISPICKVAL( Action__c, &apos;Comment&apos;))
)</errorConditionFormula>
        <errorMessage>This route will only include task that require assignee&apos;s comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approve_Status_Only_For_Approve_Action</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 NOT(ISPICKVAL(Action__c, &apos;Approve&apos;)),  
 NOT(ISBLANK( TEXT(Status__c)))
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>You need to select &apos;Approval Status&apos; only for approval action</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approve_Status_Req_For_Approve_Action</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 ISPICKVAL(Action__c, &apos;Approve&apos;),  
 ISBLANK( TEXT(Status__c))
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please select &apos;Approval Status&apos;  for approval action</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_Only_For_Comment_Action</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 NOT(ISPICKVAL(Action__c, &apos;Comment&apos;)),  
 NOT(ISBLANK(Comments__c))
)</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>You can enter &apos;Comments&apos; only  for comment action.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_Req_For_Comment_Action</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 ISPICKVAL(Action__c, &apos;Comment&apos;),  
 ISBLANK(Comments__c)
)</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please enter some &apos;Comments&apos;  for comment action.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Greater_Than_Negotiation_Date</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  Calculate_due_date_based_on_new__c  = &apos;Negotiation date&apos;,   DATEVALUE(Task_Due_Date_and_Time__c) &gt;    Negotiation_Date__c, Skip_Validation__c = false )</errorConditionFormula>
        <errorDisplayField>Task_Due_Date_and_Time__c</errorDisplayField>
        <errorMessage>&apos;Task Due Date and Time&apos;  cannot be greater than &apos;Negotiation Date&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Greater_Than_Response_Date</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  Calculate_due_date_based_on_new__c  = &apos;Customer response date&apos;,  DATEVALUE(Task_Due_Date_and_Time__c)  &gt;    Customer_response_date__c, Skip_Validation__c = false  )</errorConditionFormula>
        <errorDisplayField>Task_Due_Date_and_Time__c</errorDisplayField>
        <errorMessage>&apos;Task Due Date and Time&apos;  cannot be greater than &apos;Customer response date&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Ente_Que_Start_Dt_Bef_Actu_Start_Dt</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Start_Date__c ) &amp;&amp; NOT(ISBLANK( Adjusted_Start_Date__c )))</errorConditionFormula>
        <errorMessage>You must populate &apos;Queue Start Date&apos; before entering &apos;Actual Start Date&apos;.
To populate &apos;Queue Start Date&apos; either click on &apos;Start Routing&apos; button on route OR enter &apos;Actual End Date&apos; of &apos;Predecessor Task&apos; if any.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Enter_Actu_Start_Date_Bef_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Adjusted_Start_Date__c ) &amp;&amp; NOT(ISBLANK( Actual_End_Date__c )))</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>User must enter &apos;Actual Start Date&apos; before entering &apos;Actual End Date&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pause_Reason_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Task_Status__c, &apos;Pause&apos;),    ISBLANK(Pause_Reason__c) 
)</errorConditionFormula>
        <errorDisplayField>Pause_Reason__c</errorDisplayField>
        <errorMessage>Please enter &apos;Pause Reason&apos; when Task Status is &apos;Pause&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_User_Edit_when_Task_is_Complete</fullName>
        <active>true</active>
        <description>When RFQ Task is Complete, User can not edit the record.</description>
        <errorConditionFormula>AND(PRIORVALUE(Complete__c) = TRUE,
NOT( ISNEW()),
Skip_Validation__c = false
)</errorConditionFormula>
        <errorMessage>You can not edit the Task as it is Complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_User_Input_For_Start_Date</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
AND( ISNEW() ,  ISPICKVAL(Sequence__c, &apos;All&apos;) , NOT( ISBLANK(Start_Date__c) ),  (TEXT(Order__c)!= &apos;1&apos; ),  Skip_Validation__c  = false
),
AND(NOT(ISNEW()), ISPICKVAL(Sequence__c, &apos;All&apos;),  ISCHANGED(Start_Date__c), (TEXT(Order__c)!= &apos;1&apos; ), Skip_Validation__c  = false
)
)</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>You are not allowed to enter or change &apos;Start date&apos; when sequence is set to &apos;All&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_User_ToSet_Task_Status_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Complete__c = FALSE, 
 ISPICKVAL(Task_Status__c, &apos;Complete&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Task_Status__c</errorDisplayField>
        <errorMessage>&apos;Task Status&apos; cannot be set to &apos;Complete&apos; when &apos;Complete&apos; is not checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_User_ToSet_Task_Status_Pause</fullName>
        <active>false</active>
        <errorConditionFormula>AND( NOT(ISPICKVAL(Related_RFQ_Routing__r.Status__c, &apos;Pause&apos;)) , 
 ISPICKVAL(Task_Status__c, &apos;Pause&apos;) 
)</errorConditionFormula>
        <errorDisplayField>Task_Status__c</errorDisplayField>
        <errorMessage>&apos;Task Status&apos; cannot be set to &apos;Pause&apos; when &apos;Related RFQ Route&apos; status is not paused</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_User_To_Complete_Task</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(Task_Status__c, &apos;Complete&apos;),  Complete__c = TRUE), OR( ISBLANK( Adjusted_Start_Date__c ),  ISBLANK( Actual_End_Date__c )  )
)</errorConditionFormula>
        <errorMessage>User cannot not check &apos;Complete&apos; checkbox or set &apos;Task Status&apos; to &apos;Complete&apos; if  &quot;Actual Start Date&quot; or &quot;Actual End Date&quot; are blank</errorMessage>
    </validationRules>
</CustomObject>